[package]
name="lib_async_ops"
version="0.0.8"
edition = "2021"

[lib]
name="lib_async_ops"
crate-type=["lib"]


[dependencies]
lib_config = { path = "../lib_config" }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["fmt", "env-filter"] }
validator = { version = "0.18", features = ["derive"] }
url = {version="2.5.0", features=["serde"] }
uuid = { version = "1.8.0", features = ["v4","fast-rng",  "macro-diagnostics",  "serde"]}
aws-sdk-sqs = "1.27.0"
aws-sdk-sns = "1.28.0"
env_logger = "0.11.3"

[dev-dependencies]
tokio = { version="1.37.0", features=["full"]}
testcontainers = { git="https://github.com/joanmiespada/testcontainers-rs", branch="localstack2"  }
