[package]
name="lib_config"
version="0.0.48"
edition = "2021"

[lib]
name="lib_config"
crate-type=["lib"]

[[test]]
name="integration"
path="tests/lib.rs"

[dependencies]
aws-sdk-dynamodb = "1.20.0"
aws-config = "1.1.9"
env_logger = "0.11.3"
dotenv = "0.15.0"
envy = "0.4.2"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
aws-sdk-secretsmanager = "1.20.1"
log = "0.4.21"
aws-types = "1.1.8"
aws-sdk-kms = "1.19.0"
base64 = "0.22.0"
async-trait = "0.1.79"
#opentelemetry = { version = "0.21.0", default-features = false, features = ["trace", "rt-tokio"] }
#opentelemetry-otlp = "0.14.0"
#opentelemetry-semantic-conventions = "0.13.0"
#tracing = { version = "0.1", features = ["log"] }
#tracing-bunyan-formatter = "0.3.9"
#tracing-opentelemetry = "0.22.0"
#tracing-subscriber = { version = "0.3.18", features = ["fmt","env-filter"] }
url = {version="2.5.0", features = ["serde"]}
chrono = {version="0.4.37", features = ["serde"] }
tokio = { version="1.37.0", features=["full"]}
lazy_static = "1.4.0"
sha2 = "0.10.8"
maplit = "1.0.2"
derive_builder = "0.20.0"


[dev-dependencies]
aws-types = "1.1.8"
spectral = "0.6.0"
#testcontainers = "0.14.0"
testcontainers = { git="https://github.com/joanmiespada/testcontainers-rs", branch="localstack2"  }
