[package]
name="lib_config"
version="0.0.50"
edition = "2021"

[lib]
name="lib_config"
crate-type=["lib"]

[[test]]
name="integration"
path="tests/lib.rs"

[dependencies]
aws-sdk-dynamodb = "1.30.1"
aws-config = "1.5.0"
env_logger = "0.11.3"
dotenv = "0.15.0"
envy = "0.4.2"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
aws-sdk-secretsmanager = "1.30.0"
log = "0.4.21"
aws-types = "1.3.0"
aws-sdk-kms = "1.28.0"
base64 = "0.22.1"
async-trait = "0.1.80"
#opentelemetry = { version = "0.21.0", default-features = false, features = ["trace", "rt-tokio"] }
#opentelemetry-otlp = "0.14.0"
#opentelemetry-semantic-conventions = "0.13.0"
#tracing = { version = "0.1", features = ["log"] }
#tracing-bunyan-formatter = "0.3.9"
#tracing-opentelemetry = "0.22.0"
#tracing-subscriber = { version = "0.3.18", features = ["fmt","env-filter"] }
url = {version="2.5.0", features = ["serde"]}
chrono = {version="0.4.38", features = ["serde"] }
tokio = { version="1.37.0", features=["full"]}
lazy_static = "1.4.0"
sha2 = "0.10.8"
maplit = "1.0.2"
derive_builder = "0.20.0"


[dev-dependencies]
aws-types = "1.3.0"
spectral = "0.6.0"
#testcontainers = "0.14.0"
testcontainers = { git="https://github.com/joanmiespada/testcontainers-rs", branch="localstack2"  }
