[package]
name="lib_hash_objs"
version="0.0.6"
edition = "2021"

[lib]
name="lib_hash_objs"
crate-type=["lib"]

[dependencies]
env_logger = "0.11.3"
dotenv = "0.15.0"
envy = "0.4.2"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
log = "0.4.21"
base64 = "0.22.0"
async-trait = "0.1.79"
url = {version="2.5.0", features=["serde"] }
uuid = { version = "1.8.0", features = ["v4","fast-rng",  "macro-diagnostics",  "serde"]}
