[package]
name="lib_video_objs"
version="0.0.1"
edition = "2021"

[lib]
name="lib_video_objs"
crate-type=["lib"]

[dependencies]
env_logger = "0.10.0"
dotenv = "0.15.0"
envy = "0.4.2"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
log = "0.4.20"
base64 = "0.21.5"
async-trait = "0.1.74"
url = {version="2.4.1", features=["serde"] }
uuid = { version = "1.5.0", features = ["v4","fast-rng",  "macro-diagnostics",  "serde"]}
